Fixing horizontal scroll problem

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #2d609b;
 }
